--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1495,8 +1495,19 @@
    "source": [
     "When it comes to global variables in Python, either the variable exists and has a value or it doesn't exist. There is no such thing as a variable existing but being \"unbound\" to any value.\n",
     "\n",
-    "However, functions are different! When we write our function, Python notices the names of the variables to which"
+    "However, functions are different! When we write our function, Python notices the names of the variables to which we'll be assigning. It marks those as local variables. When we invoke our function, and we assign to a local variable, all is good. But if we try to retrieve from a local variable before we have assigned to it... we get UnboundLocalError.\n",
+    "\n",
+    "In this case, we assigned to `population` inside of the function. Python assumes that we want to create a new local variable with the same name as the global one. Then, we use `+=` on it. That requires retrieving the current value of the variable... but it has no value! We get the exception.\n",
+    "\n",
+    "We can get around this problem by declaring the `population` variable to be `global`. That tells Python's compiler not to mark it as local, and we'll thus assign where we want."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
