--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1504,6 +1504,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before, population = 0\n",
+      "After, population = 2\n",
+      "Hello, name1!\n",
+      "Hello, name2!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# My boss comes to me and says: Our customers love the Person class!\n",
+    "# They want some new functionality, to know how many instances have been created\n",
+    "\n",
+    "# answer #1: a global variable, population!\n",
+    "\n",
+    "population = 0\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        global population\n",
+    "        self.name = name\n",
+    "        population += 1    # add 1 to the global variable population!\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}!'\n",
+    "\n",
+    "print(f'Before, population = {population}')\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "print(f'After, population = {population}')\n",
+    "\n",
+    "print(p1.greet())\n",
+    "print(p2.greet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# it's really bad for a function to use \"global\" so that it can assign to a global variable.\n",
+    "# sometimes there isn't any choice... but maybe we have one here!\n",
+    "\n",
+    "# option 2: Define a class attribute\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
