--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1546,15 +1546,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before, population = 0\n",
+      "After, population = 2\n",
+      "Hello, name1!\n",
+      "Hello, name2!\n"
+     ]
+    }
+   ],
    "source": [
     "# it's really bad for a function to use \"global\" so that it can assign to a global variable.\n",
     "# sometimes there isn't any choice... but maybe we have one here!\n",
     "\n",
     "# option 2: Define a class attribute\n",
-    "\n"
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        Person.population += 1    # add 1 to the attribute Person.population\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}!'\n",
+    "\n",
+    "# after the class as been defined, I'll add a new attribute to it\n",
+    "Person.population = 0\n",
+    "\n",
+    "print(f'Before, population = {Person.population}')\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "print(f'After, population = {Person.population}')\n",
+    "\n",
+    "print(p1.greet())\n",
+    "print(p2.greet())"
    ]
   },
   {
