--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1591,7 +1591,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# option 3: Define a class attribute inside of the class definition!\n",
+    "\n",
+    "class Person:\n",
+    "    Person.population = 0\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        Person.population += 1    # add 1 to the attribute Person.population\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}!'\n",
+    "\n",
+    "\n",
+    "print(f'Before, population = {Person.population}')\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "print(f'After, population = {Person.population}')\n",
+    "\n",
+    "print(p1.greet())\n",
+    "print(p2.greet())"
+   ]
   }
  ],
  "metadata": {
