--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1588,22 +1588,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before, population = 0\n",
+      "After, population = 2\n",
+      "Hello, name1!\n",
+      "Hello, name2!\n"
+     ]
+    }
+   ],
    "source": [
     "# option 3: Define a class attribute inside of the class definition!\n",
+    "# inside of the class body, there is an implicit understanding that all assignment\n",
+    "#  is to class attributes, not to variables\n",
     "\n",
     "class Person:\n",
-    "    Person.population = 0\n",
+    "    population = 0    # actually Person.population\n",
     "\n",
-    "    def __init__(self, name):\n",
+    "    def __init__(self, name):  # actually Person.__init__\n",
     "        self.name = name\n",
     "        Person.population += 1    # add 1 to the attribute Person.population\n",
     "\n",
-    "    def greet(self):\n",
+    "    def greet(self):  # Person.greet\n",
     "        return f'Hello, {self.name}!'\n",
-    "\n",
     "\n",
     "print(f'Before, population = {Person.population}')\n",
     "p1 = Person('name1')\n",
@@ -1613,6 +1625,13 @@
     "print(p1.greet())\n",
     "print(p2.greet())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
