--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1627,6 +1627,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# When do we want to use class attributes?\n",
+    "\n",
+    "1. If there's a resource that we want to share among our instances. We can say `Person.population` from any of our instances, and it'll work fine.\n",
+    "2. To set constants, or generally values that will be useful. The class is a natural place to put such definitions.\n",
+    "3. Methods are class attributes as well, but that's a bit different."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
