--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1638,6 +1638,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Limit scoops\n",
+    "\n",
+    "1. Modify the `Bowl` class, such that at most three scoops can be added into the bowl. If we ever get a request to add another scoop to a full bowl, we ignore the requests.\n",
+    "2. It shouldn't matter if we invoke `add_scoop` or `add_scoops`, or how many times we invoke them, or how many arguments we pass to `add_scoops`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
