--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1726,7 +1726,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# what if I do this?\n",
+    "\n",
+    "class Person:\n",
+    "    population = 0    # actually Person.population\n",
+    "\n",
+    "    def __init__(self, name):  # actually Person.__init__\n",
+    "        self.name = name\n",
+    "        Person.population += 1    # add 1 to the attribute Person.population\n",
+    "\n",
+    "    def greet(self):  # Person.greet\n",
+    "        return f'Hello, {self.name}!'\n",
+    "\n",
+    "print(f'Before, population = {Person.population}')\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "print(f'After, population = {Person.population}')\n",
+    "print(f'After, p1.population = {p1.population}')\n",
+    "print(f'After, p2.population = {p2.population}')\n",
+    "\n",
+    "print(p1.greet())\n",
+    "print(p2.greet())"
+   ]
   }
  ],
  "metadata": {
