--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1723,9 +1723,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before, population = 0\n",
+      "After, population = 2\n",
+      "After, p1.population = 2\n",
+      "After, p2.population = 2\n",
+      "Hello, name1!\n",
+      "Hello, name2!\n"
+     ]
+    }
+   ],
    "source": [
     "# what if I do this?\n",
     "\n",
@@ -1748,6 +1761,17 @@
     "\n",
     "print(p1.greet())\n",
     "print(p2.greet())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Attribute lookup\n",
+    "\n",
+    "When we ask Python to retrieve the value of an attribute on an object, we think that we'll either get a value back or that we'll get an exception, an `AttributeError`, indicating that the attribute doesn't exist.\n",
+    "\n",
+    "But Python doesn't work like th"
    ]
   }
  ],
