--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1771,8 +1771,23 @@
     "\n",
     "When we ask Python to retrieve the value of an attribute on an object, we think that we'll either get a value back or that we'll get an exception, an `AttributeError`, indicating that the attribute doesn't exist.\n",
     "\n",
-    "But Python doesn't work like th"
+    "But Python doesn't work like this. If we ask for an attribute from object, Python tries in a few places before giving up:\n",
+    "\n",
+    "- On the instance itself that requested\n",
+    "- On the class of the instance\n",
+    "\n",
+    "In our Person example, when we asked for `p1.population`, this is what happened:\n",
+    "\n",
+    "- Python asked `p1` if it has an attribute named `population`. The answer was \"no.\"\n",
+    "- Python then asked `p1`'s class, `Person`, if it has an attribute named `population`, the answer was \"yes,\" and we got the number back."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
