--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1779,7 +1779,16 @@
     "In our Person example, when we asked for `p1.population`, this is what happened:\n",
     "\n",
     "- Python asked `p1` if it has an attribute named `population`. The answer was \"no.\"\n",
-    "- Python then asked `p1`'s class, `Person`, if it has an attribute named `population`, the answer was \"yes,\" and we got the number back."
+    "- Python then asked `p1`'s class, `Person`, if it has an attribute named `population`, the answer was \"yes,\" and we got the number back.\n",
+    "\n",
+    "You have already seen this before, because you have been executing methods. Remember that when we invoke\n",
+    "\n",
+    "    p1.greet()\n",
+    "\n",
+    "Python:\n",
+    "\n",
+    "- Turns to `p1` and asks: Do you have an attribute named `greet`? The answer is \"no.\"\n",
+    "- Turns to `p1`'s class and asks: Do you have an attribute named `greet`? The answer is \"yes.\" That method is retrieved and invoked."
    ]
   },
   {
