--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1792,6 +1792,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# My term for this\n",
+    "\n",
+    "ICPO:\n",
+    "\n",
+    "- First, we look on the *instance* that was named in the Python expression\n",
+    "- Then, we look on the *class* of that instance\n",
+    "- Then we look on that class's *parents* (via inheritance)\n",
+    "- Finally, we look at `object`, the ultimate parent in the Python class hierarchy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
