--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1855,8 +1855,26 @@
     "\n",
     "- We ran `self.population += 1`\n",
     "- This first retrieved the current value of `self.population`.\n",
-    "- On a new object,"
+    "- On a new object, there is no attribute `self.population`. So we were told to check with the class, `Person`.\n",
+    "- `Person` has an attribute `population`, with a value of 0. We grab that, add 1, and then assign to `self.population`, creating a new attribute on the instance that has nothing to do with the attribute of the same name on the class."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What's my point?\n",
+    "\n",
+    "- It's OK to retrieve a class attribute either via the instance or via the class.\n",
+    "- If you're setting a class attribute, you *must* assign via the class. Assigning via the instance will create this kind of chaos, with a new attribute on the instance that we really wanted on the class.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
