--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1965,9 +1965,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1\n",
+      "Hello, name2\n"
+     ]
+    }
+   ],
    "source": [
     "# Once again, we have a Person class that our company has developed.\n",
     "# Our clients are super happy with it!\n",
@@ -1976,7 +1985,41 @@
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "\n",
-    "    def "
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet())  # does p1 have greet? No. Does Person have greet? Yes! We run that.\n",
+    "print(p2.greet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Our customers are so happy with our software, they want to use it to manage\n",
+    "# more of their business. That means having not just a Person class, but also\n",
+    "# an Employee class. Employees are identical to People, except that they have one\n",
+    "# additional piece of information associated with them -- their ID number.\n",
+    "\n",
+    "# Option 1:\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet()) \n",
+    "print(p2.greet())"
    ]
   }
  ],
