--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1997,16 +1997,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1\n",
+      "Hello, name2\n",
+      "Hello, emp1\n",
+      "Hello, emp2\n"
+     ]
+    }
+   ],
    "source": [
     "# Our customers are so happy with our software, they want to use it to manage\n",
     "# more of their business. That means having not just a Person class, but also\n",
     "# an Employee class. Employees are identical to People, except that they have one\n",
     "# additional piece of information associated with them -- their ID number.\n",
     "\n",
-    "# Option 1:\n",
+    "# Option 1: Copy and paste!\n",
     "\n",
     "class Person:\n",
     "    def __init__(self, name):\n",
@@ -2019,7 +2030,76 @@
     "p2 = Person('name2')\n",
     "\n",
     "print(p1.greet()) \n",
-    "print(p2.greet())"
+    "print(p2.greet())\n",
+    "\n",
+    "class Employee:\n",
+    "    def __init__(self, name, id_number):\n",
+    "        self.name = name\n",
+    "        self.id_number = id_number\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "e1 = Employee('emp1', 1)\n",
+    "e2 = Employee('emp2', 2)\n",
+    "\n",
+    "print(e1.greet()) \n",
+    "print(e2.greet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# My boss says: You have two classes here, one of which is nearly identical to the other.\n",
+    "# Couldn't you use inheritance?\n",
+    "\n",
+    "# Option 2: Inheritance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inheritance\n",
+    "\n",
+    "Many *many* classes in object-orietned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet()) \n",
+    "print(p2.greet())\n",
+    "\n",
+    "class Employee:\n",
+    "    def __init__(self, name, id_number):\n",
+    "        self.name = name\n",
+    "        self.id_number = id_number\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "e1 = Employee('emp1', 1)\n",
+    "e2 = Employee('emp2', 2)\n",
+    "\n",
+    "print(e1.greet()) \n",
+    "print(e2.greet())"
    ]
   }
  ],
