--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2065,7 +2065,15 @@
    "source": [
     "# Inheritance\n",
     "\n",
-    "Many *many* classes in object-orietned"
+    "Many *many* classes in object-oriented programming seem to stress inheritance as one of the most important parts of this paradigm. It is important, and useful... but not everywhere.\n",
+    "\n",
+    "The whole point of inheritance is to avoid writing duplicate code. If there's already a class that basically, mostly does what you want in your new class, then you *inherit* from the existing one and just tweak/modify what needs changing.\n",
+    "\n",
+    "This is true if you have written the original class, or a colleague has, or a third party has. By inheriting from that other class, you can then make a new class that's more specific than that one, and closer to your needs.\n",
+    "\n",
+    "If you have two classes, one of which is a specific version of the other, then inheritance seems like a good idea. \n",
+    "\n",
+    "Inheritanc"
    ]
   },
   {
