--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2073,7 +2073,14 @@
     "\n",
     "If you have two classes, one of which is a specific version of the other, then inheritance seems like a good idea. \n",
     "\n",
-    "Inheritanc"
+    "Inheritance works via attribute lookup:\n",
+    "\n",
+    "- If an attribute is on an instance, we get that value.\n",
+    "- If not, then we look at the instance's class.\n",
+    "- If not there, then we look at the *PARENT* of that class. In other words, we can say that one class *inherits* from another.\n",
+    "- In fact, we can have several levels of parents\n",
+    "- Eventually, we get to the final, ultimate, highest parent, known as `object`.\n",
+    "- If the attribute (method) we want isn't found anywhere, then we get an error."
    ]
   },
   {
