--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2085,9 +2085,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1\n",
+      "Hello, name2\n",
+      "Hello, emp1\n",
+      "Hello, emp2\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def __init__(self, name):\n",
@@ -2102,7 +2113,7 @@
     "print(p1.greet()) \n",
     "print(p2.greet())\n",
     "\n",
-    "class Employee:\n",
+    "class Employee(Person):    # putting a class in () means: Employee inherits from Person, aka Employee is-a Person\n",
     "    def __init__(self, name, id_number):\n",
     "        self.name = name\n",
     "        self.id_number = id_number\n",
@@ -2116,6 +2127,58 @@
     "print(e1.greet()) \n",
     "print(e2.greet())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1\n",
+      "Hello, name2\n",
+      "Hello, emp1\n",
+      "Hello, emp2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# because \"greet\" is identical in Employee (the child class) and Person (the parent class), we can\n",
+    "# just get rid of Employee.greet.\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet()) \n",
+    "print(p2.greet())\n",
+    "\n",
+    "class Employee(Person):    # putting a class in () means: Employee inherits from Person, aka Employee is-a Person\n",
+    "    def __init__(self, name, id_number):\n",
+    "        self.name = name\n",
+    "        self.id_number = id_number\n",
+    "\n",
+    "e1 = Employee('emp1', 1)\n",
+    "e2 = Employee('emp2', 2)\n",
+    "\n",
+    "print(e1.greet()) # \n",
+    "print(e2.greet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
