--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2169,7 @@
     "e1 = Employee('emp1', 1)\n",
     "e2 = Employee('emp2', 2)\n",
     "\n",
-    "print(e1.greet()) # \n",
+    "print(e1.greet()) # does e1 have greet? No. Does Employee have greet? No. Does Person (Employee's parent) have greet? Yes.\n",
     "print(e2.greet())"
    ]
   },
