--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2178,7 +2178,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# what about our assignment to self.name in both Person.__init__ and Employee.__init__?\n",
+    "# what if we remove the assignment from Employee? Can we rely on Person.__init__ to set it?\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet()) \n",
+    "print(p2.greet())\n",
+    "\n",
+    "class Employee(Person):    # putting a class in () means: Employee inherits from Person, aka Employee is-a Person\n",
+    "    def __init__(self, name, id_number):\n",
+    "        self.id_number = id_number\n",
+    "\n",
+    "e1 = Employee('emp1', 1)\n",
+    "e2 = Employee('emp2', 2)\n",
+    "\n",
+    "print(e1.greet()) # does e1 have greet? No. Does Employee have greet? No. Does Person (Employee's parent) have greet? Yes.\n",
+    "print(e2.greet())"
+   ]
   }
  ],
  "metadata": {
