--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2175,9 +2175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1\n",
+      "Hello, name2\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Employee' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[81]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[32m     21\u001b[39m e1 = Employee(\u001b[33m'\u001b[39m\u001b[33memp1\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m1\u001b[39m)\n\u001b[32m     22\u001b[39m e2 = Employee(\u001b[33m'\u001b[39m\u001b[33memp2\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m2\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43me1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgreet\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m# does e1 have greet? No. Does Employee have greet? No. Does Person (Employee's parent) have greet? Yes.\u001b[39;00m\n\u001b[32m     25\u001b[39m \u001b[38;5;28mprint\u001b[39m(e2.greet())\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[81]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mPerson.greet\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mgreet\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mHello, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Employee' object has no attribute 'name'"
+     ]
+    }
+   ],
    "source": [
     "# what about our assignment to self.name in both Person.__init__ and Employee.__init__?\n",
     "# what if we remove the assignment from Employee? Can we rely on Person.__init__ to set it?\n",
@@ -2204,6 +2225,23 @@
     "\n",
     "print(e1.greet()) # does e1 have greet? No. Does Employee have greet? No. Does Person (Employee's parent) have greet? Yes.\n",
     "print(e2.greet())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What's going on here?\n",
+    "\n",
+    "When we create a new instance of `Employee`, let's consider what happens:\n",
+    "\n",
+    "- `__new__` creates a new object\n",
+    "- It then invokes `__init__` to add new attributes.\n",
+    "- In our case, Python asks e1 if it has an attribute `__init__`. The answer is \"no.\"\n",
+    "- Python asks `Employee` if it has an attribute `__init__`. The answer is \"yes.\"\n",
+    "- That's the method that runs! That's the `__init__`. No more is run.\n",
+    "\n",
+    "The problem is that `Pesron"
    ]
   }
  ],
