--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2218,6 +2218,7 @@
     "\n",
     "class Employee(Person):    # putting a class in () means: Employee inherits from Person, aka Employee is-a Person\n",
     "    def __init__(self, name, id_number):\n",
+    "        self.name = name\n",
     "        self.id_number = id_number\n",
     "\n",
     "e1 = Employee('emp1', 1)\n",
@@ -2241,8 +2242,15 @@
     "- Python asks `Employee` if it has an attribute `__init__`. The answer is \"yes.\"\n",
     "- That's the method that runs! That's the `__init__`. No more is run.\n",
     "\n",
-    "The problem is that `Pesron"
+    "The problem is that `Person.__init__` is never run. We never have to go up the inheritance chain, because `Employee` already has `__init__`. Thus, `name` is never set on `self`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
