--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2242,7 +2242,13 @@
     "- Python asks `Employee` if it has an attribute `__init__`. The answer is \"yes.\"\n",
     "- That's the method that runs! That's the `__init__`. No more is run.\n",
     "\n",
-    "The problem is that `Person.__init__` is never run. We never have to go up the inheritance chain, because `Employee` already has `__init__`. Thus, `name` is never set on `self`."
+    "The problem is that `Person.__init__` is never run. We never have to go up the inheritance chain, because `Employee` already has `__init__`. Thus, `name` is never set on `self`.\n",
+    "\n",
+    "The upshot:\n",
+    "\n",
+    "- If the child class has a method, then the parent class's method of the same name is never run.\n",
+    "- We had assumed that the parent `__init__` would run, and would set `self.name`.\n",
+    "- Now that we understand that not to be the case, it's annoying that we have to duplicate code in `Employee.__init__`."
    ]
   },
   {
