--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2253,6 +2253,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1\n",
+      "Hello, name2\n",
+      "Hello, emp1\n",
+      "Hello, emp2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's avoid duplicating code!\n",
+    "# option 1: Just call `Person.__init__` from inside of `Employee.__init__`\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet()) \n",
+    "print(p2.greet())\n",
+    "\n",
+    "class Employee(Person):    # putting a class in () means: Employee inherits from Person, aka Employee is-a Person\n",
+    "    def __init__(self, name, id_number):\n",
+    "        Person.__init__(self, name)  # we can invoke the parent class's method\n",
+    "        self.id_number = id_number\n",
+    "\n",
+    "e1 = Employee('emp1', 1)\n",
+    "e2 = Employee('emp2', 2)\n",
+    "\n",
+    "print(e1.greet()) # does e1 have greet? No. Does Employee have greet? No. Does Person (Employee's parent) have greet? Yes.\n",
+    "print(e2.greet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1\n",
+      "Hello, name2\n",
+      "Hello, emp1\n",
+      "Hello, emp2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet()) \n",
+    "print(p2.greet())\n",
+    "\n",
+    "class Employee(Person):    # putting a class in () means: Employee inherits from Person, aka Employee is-a Person\n",
+    "    def __init__(self, name, id_number):\n",
+    "        super().__init__(name)  # super figures out our instance and passes it along, then lets us invoke the right method\n",
+    "        self.id_number = id_number\n",
+    "\n",
+    "e1 = Employee('emp1', 1)\n",
+    "e2 = Employee('emp2', 2)\n",
+    "\n",
+    "print(e1.greet()) # does e1 have greet? No. Does Employee have greet? No. Does Person (Employee's parent) have greet? Yes.\n",
+    "print(e2.greet())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
