--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2340,6 +2340,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Big Bowl\n",
+    "\n",
+    "Define a new class, `BigBowl`, which is identical in every way to `Bowl`, except that it allows for a maximum of 5 scoops, not 3.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
