--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2350,6 +2350,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bowl of: \n",
+      "\t1: Scoop of chocolate\n",
+      "\t2: Scoop of vanilla\n",
+      "\t3: Scoop of coffee\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "    def __repr__(self):\n",
+    "        return f'Scoop of {self.flavor}'\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "s4 = Scoop('flavor 4')\n",
+    "s5 = Scoop('flavor 5')\n",
+    "s6 = Scoop('flavor 6')\n",
+    "    \n",
+    "class Bowl:\n",
+    "    MAX_SCOOPS = 3\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "\n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        if len(self.scoops) >= Bowl.MAX_SCOOPS:\n",
+    "            return\n",
+    "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "    def add_scoops(self, *new_scoops):\n",
+    "        for one_scoop in new_scoops:   \n",
+    "            self.add_scoop(one_scoop)  \n",
+    "\n",
+    "    def flavors(self):\n",
+    "        output = []\n",
+    "\n",
+    "        for one_scoop in self.scoops:\n",
+    "            output.append(one_scoop.flavor)\n",
+    "\n",
+    "        return output\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.scoops)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        output = 'Bowl of: \\n'\n",
+    "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
+    "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
+    "\n",
+    "    def __getitem__(self, flavor):\n",
+    "        for one_scoop in self.scoops:\n",
+    "            if one_scoop.flavor == flavor:\n",
+    "                return one_scoop\n",
+    "\n",
+    "print('*** Bowl ***')\n",
+    "b = Bowl()   \n",
+    "b.add_scoops(s1, s2, s3)  \n",
+    "b.add_scoops(s4, s5)  \n",
+    "b.add_scoops(s6)\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "print('*** BigBowl ***')\n",
+    "bb = BigBowl()   \n",
+    "bb.add_scoops(s1, s2, s3)  \n",
+    "bb.add_scoops(s4, s5)  \n",
+    "bb.add_scoops(s6)\n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
