--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2350,17 +2350,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "*** Bowl ***\n",
       "Bowl of: \n",
       "\t1: Scoop of chocolate\n",
       "\t2: Scoop of vanilla\n",
-      "\t3: Scoop of coffee\n"
+      "\t3: Scoop of coffee\n",
+      "*** BigBowl ***\n",
+      "BigBowl of: \n",
+      "\t1: Scoop of chocolate\n",
+      "\t2: Scoop of vanilla\n",
+      "\t3: Scoop of coffee\n",
+      "\t4: Scoop of flavor 4\n",
+      "\t5: Scoop of flavor 5\n"
      ]
     }
    ],
@@ -2401,18 +2409,24 @@
     "\n",
     "        return output\n",
     "\n",
-    "    def __len__(self):\n",
-    "        return len(self.scoops)\n",
-    "\n",
     "    def __repr__(self):\n",
     "        output = 'Bowl of: \\n'\n",
     "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
     "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
     "\n",
-    "    def __getitem__(self, flavor):\n",
-    "        for one_scoop in self.scoops:\n",
-    "            if one_scoop.flavor == flavor:\n",
-    "                return one_scoop\n",
+    "\n",
+    "class BigBowl(Bowl):\n",
+    "    MAX_SCOOPS = 5\n",
+    "    \n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        if len(self.scoops) >= BigBowl.MAX_SCOOPS:\n",
+    "            return\n",
+    "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        output = 'BigBowl of: \\n'\n",
+    "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
+    "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
     "\n",
     "print('*** Bowl ***')\n",
     "b = Bowl()   \n",
@@ -2428,7 +2442,7 @@
     "bb.add_scoops(s4, s5)  \n",
     "bb.add_scoops(s6)\n",
     "\n",
-    "print(b)"
+    "print(bb)"
    ]
   },
   {
