--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2350,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2393,7 +2393,7 @@
     "        self.scoops = []\n",
     "\n",
     "    def add_scoop(self, new_scoop):\n",
-    "        if len(self.scoops) >= Bowl.MAX_SCOOPS:\n",
+    "        if len(self.scoops) >= self.MAX_SCOOPS:\n",
     "            return\n",
     "        self.scoops.append(new_scoop)\n",
     "\n",
@@ -2410,7 +2410,7 @@
     "        return output\n",
     "\n",
     "    def __repr__(self):\n",
-    "        output = 'Bowl of: \\n'\n",
+    "        output = f'{type(self).__name__} of: \\n'\n",
     "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
     "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
     "\n",
@@ -2418,16 +2418,6 @@
     "class BigBowl(Bowl):\n",
     "    MAX_SCOOPS = 5\n",
     "    \n",
-    "    def add_scoop(self, new_scoop):\n",
-    "        if len(self.scoops) >= BigBowl.MAX_SCOOPS:\n",
-    "            return\n",
-    "        self.scoops.append(new_scoop)\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        output = 'BigBowl of: \\n'\n",
-    "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
-    "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
-    "\n",
     "print('*** Bowl ***')\n",
     "b = Bowl()   \n",
     "b.add_scoops(s1, s2, s3)  \n",
