--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2436,6 +2436,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Three paradigms of method inheritance\n",
+    "\n",
+    "There are three basic types of relationships that a child class and a parent class can interact with their methods:\n",
+    "\n",
+    "1. The parent class defines a method, and the child class does not. That's what we saw with `Person.greet` and even some other methods. The child relies on the parent to do everything. This is appropriate where a child class wants to modify certain behavior, but not all of it. Any behavior that it'll accept as was already done in the parent... for that, we don't need to define a method in the child class.\n",
+    "2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
