--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2444,7 +2444,8 @@
     "There are three basic types of relationships that a child class and a parent class can interact with their methods:\n",
     "\n",
     "1. The parent class defines a method, and the child class does not. That's what we saw with `Person.greet` and even some other methods. The child relies on the parent to do everything. This is appropriate where a child class wants to modify certain behavior, but not all of it. Any behavior that it'll accept as was already done in the parent... for that, we don't need to define a method in the child class.\n",
-    "2. "
+    "2. The parent class defines a method, and the child class wants totally different behavior. In that case, the child class *must* define the method of the same name. That overrides the parent's method.\n",
+    "3. The parent class defines a method, and the child class wants that same behavior *plus* some additional behavior. In such a case, the child class invokes `super`, has the parent method run, and then after that, the child class does its specialized things. It's important for the parent method to run first, so that our child class can modify whatever it did."
    ]
   },
   {
