--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2449,11 +2449,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# `object`\n",
+    "\n",
+    "This is the top of the hierarchy. This is where `__str__` and `__repr__` are defined for all Python objects. \n",
+    "\n",
+    "When we define these methods in our classes, the ICPO lookup will first encounter our class, and thus never get to `object`, where the default is defined."
+   ]
   },
   {
    "cell_type": "code",
