--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2460,11 +2460,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# What have we learned?\n",
+    "\n",
+    "- What objects are\n",
+    "- What classes are\n",
+    "- How to define classes\n",
+    "- How to define `__init__`, which adds new attributes\n",
+    "- That `self` is the way that we can access the instance on which a method was invoked\n",
+    "- That Python does some rewriting behind the scenes so that we can invoke a method either on an instance or on a class\n",
+    "- Magic methods allow us to modify Python's default functionality, as defined in `object`\n",
+    "- How can we use inheritance "
+   ]
   },
   {
    "cell_type": "code",
