--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2472,7 +2472,8 @@
     "- That `self` is the way that we can access the instance on which a method was invoked\n",
     "- That Python does some rewriting behind the scenes so that we can invoke a method either on an instance or on a class\n",
     "- Magic methods allow us to modify Python's default functionality, as defined in `object`\n",
-    "- How can we use inheritance "
+    "- How can we use inheritance to reduce code verbosity\n",
+    "- How we can define methods in a subclass to reduce the code we have to write"
    ]
   },
   {
