--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -2477,11 +2477,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Where to from here?\n",
+    "\n",
+    "- Read more about Python objects\n",
+    "- Most important: Practice!\n",
+    "- PracticeYourPython.com -- resources for practicing Python coding, including with objects"
+   ]
   },
   {
    "cell_type": "code",
